Fixed bug #12934 locatime() now returns an error message when passed a negative value.